# tech-challenge-04

./: .gitignore  readme.md
data-service/: .funcignore  function_app.py  host.json  local.settings.json  pyproject.toml  requeriments.txt  requirements.txt
data-service/utils/: config.py  feature_engineering.py  openapi.py  parquet_handler.py  storage.py  yfinance_client.py
modeling/: __init__.py  dataio.py  dataset.py  feature_engineering.py  lstm_pl.py  model.py  predict.py  requirements.txt  train.py
notebooks/: LSTM+IAExpertAcademyV3.ipynb  LSTM_BASE.ipynb  LSTM_BBAS3.ipynb  LSTM_ITUB4.ipynb  LSTM_PETR4.ipynb  LSTM_VALE3.ipynb  LSTM_train.ipynb  README.md  pyproject.toml  requirements.txt
notebooks/configs/: ITUB4.json  PETR4.json  VALE3.json
notebooks/data/predict/: ITUB4.parquet  PETR4.parquet
notebooks/data/train/: BBAS3.parquet  ITUB4.parquet  PETR4.parquet  VALE3.parquet
notebooks/models/: BBAS3_LSTM_scalers.pkl  BBAS3_LSTM_v1_metrics.pkl  ITUB4_LSTM_metrics.pkl  ITUB4_LSTM_scalers.pkl  PETR4_LSTM_v1_metrics.pkl  PETR4_LSTM_v1_scalers.pkl  VALE3_LSTM_v1_metrics.pkl  VALE3_LSTM_v1_scalers.pkl
scripts/: aggregate_model_metrics.py  convert_models_to_json.py  count_total_predictions.py  dump_pkl_readable.py  export_predictions_by_day_ticker.py  generate_core_graphs.py  last_prediction_per_ticker.py  list_parquet_columns.py  plot_directional_accuracy.py  (+7 more)
stock-service/: .funcignore  function_app.py  host.json  pyproject.toml  pyrightconfig.json  requirements.txt
stock-service/utils/: __init__.py  config.py  cosmos_client.py  dataset.py  metrics.py  model.py  openapi.py  predictor.py  storage.py  trainer.py
(+41 files in other folders)
