[project]
name = "lstm-stocks"
version = "0.1.0"
description = "LSTM model for stock price prediction"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=14.0.0",
    "jupyterlab>=4.0.0",
    "pytorch-lightning>=2.0.0",
    "tensorboard>=2.20.0",
]

[tool.uv]
dev-dependencies = []
