[project]
name = "stock-service"
version = "0.1.0"
description = "Azure Functions (Python) - Stock prediction service with LSTM"
requires-python = ">=3.11"
dependencies = [
  "azure-functions>=1.20.0",
  "azure-storage-blob>=12.20.0",
  "azure-cosmos>=4.5.0",
  "pandas>=2.2.2",
  "pyarrow>=16.1.0",
  "python-dateutil>=2.8.2",
  "python-dotenv>=1.0.0",
  "numpy>=1.26.0",
  "tzdata>=2024.1",
  "torch>=2.0.0",
  "pytorch-lightning>=2.0.0",
  "scikit-learn>=1.3.0",
  "joblib>=1.3.0",
  "pylint>=4.0.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
